--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,20 +1,29 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
     <ion-title>
-      Blank
+      Login
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Blank</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content>
+  <form  #form="ngForm" (ngSubmit)="login()" >
+    <div padding> 
+      <ion-item>
+        <ion-label position="floating"><ion-icon name="person"></ion-icon>Username</ion-label>
+        <ion-input  name="userid" [(ngModel)]="userid" type="text" ngModel required></ion-input>
+      </ion-item>
 
-  <div id="container">
-    <strong>Ready to create an app?</strong>
-    <p>Start with Ionic <a target="_blank" rel="noopener noreferrer" href="https://ionicframework.com/docs/components">UI Components</a></p>
-  </div>
+      <ion-item>
+        <ion-label position="floating"><ion-icon name="key"></ion-icon>Password</ion-label>
+        <ion-input  name="password" [(ngModel)]="password" type="password" ngModel required></ion-input>
+      </ion-item>
+    
+      <ion-button  slot="end" size="small" type="submit" expand="block" color ="dark">Login</ion-button>
+    </div>
+    
+    <div *ngIf="error" class="error" padding >
+      {{error}}
+    </div>
+  </form>
 </ion-content>
