--- a/src/app/accessories/accessories.page.html
+++ b/src/app/accessories/accessories.page.html
@@ -1,24 +1,44 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>accessories</ion-title>
+  <ion-toolbar color="dark">
+    <ion-title>
+      Shopping Cart
+    </ion-title>
+  </ion-toolbar>
+</ion-header>
+<ion-header>
+  <ion-toolbar color="dark">
+    <ion-title>
+      Accessories
+    </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
-  <ion-text>
-    <h3>Hair serum
-      <h6>Biotique</h6>
-      <ion-button>Add to cart</ion-button>
-    </h3> 
-    <h3>Moisturizer
-      <h6>Nykaa</h6>
-      <ion-button>Add to cart</ion-button>
-    </h3>
-    <h3>Sunscreen
-      <h6>The Fashion Studio</h6>
-      <ion-button >Add to cart</ion-button>
-    </h3>
-  </ion-text>
-
+  <ion-fab vertical="top" horizontal="end">
+    <ion-fab-button color = "dark" >
+      <ion-icon name="cart-sharp">{{total}}</ion-icon>
+    </ion-fab-button>
+  </ion-fab>
+  <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
+  
+  <ion-list>
+    <ion-card *ngFor="let product of accessories">
+      <ion-card-header>
+        <ion-card-title>{{ product.name }}</ion-card-title>
+        <ion-card-title>{{ product.id }}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <ion-row class="ion-align-items-center">
+          <ion-col size="8">
+            <ion-label color="secondary">
+              <b>{{ product.price | currency:'INR' }}</b>
+            </ion-label>
+          </ion-col>
+          <ion-col size="4" class="ion-text-right">
+            <ion-button (click) = 'addtocart(product)'>Add to cart</ion-button>
+          </ion-col>
+        </ion-row>
+      </ion-card-content>
+    </ion-card>
+  </ion-list>
 </ion-content>
