--- a/src/app/mycart/mycart.page.html
+++ b/src/app/mycart/mycart.page.html
@@ -8,37 +8,35 @@
 <ion-header>
   <ion-toolbar color="dark">
     <ion-title>
-      Women Wear
+      My Cart
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="top" horizontal="end">
-    <ion-fab-button color = "dark" >
-      <ion-icon name="cart-sharp">{{total}}</ion-icon>
-    </ion-fab-button>
-  </ion-fab>
-  <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
-  
+    <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
   <ion-list>
-    <ion-card *ngFor="let product of womencloths">
+    <ion-card *ngFor="let product of carts">
       <ion-card-header>
         <ion-card-title>{{ product.name }}</ion-card-title>
-        <ion-card-title>{{ product.id }}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
         <ion-row class="ion-align-items-center">
           <ion-col size="8">
+            <h1>{{product.id}}</h1>
             <ion-label color="secondary">
               <b>{{ product.price | currency:'INR' }}</b>
             </ion-label>
           </ion-col>
           <ion-col size="4" class="ion-text-right">
-            <ion-button (click) = 'addtocart(product)'>Add to cart</ion-button>
+            <ion-button (click)='removeProduct(product)'>Remove from cart</ion-button>
           </ion-col>
         </ion-row>
       </ion-card-content>
     </ion-card>
   </ion-list>
+  
 </ion-content>
+
+
+
