moving myyapp code to git

--- a/src/app/accessories/accessories.page.html
+++ b/src/app/accessories/accessories.page.html
@@ -1,6 +1,6 @@
 <ion-header>
   <ion-toolbar color="dark">
-    <ion-title>
+    <ion-title><ion-icon name="cart-sharp"></ion-icon>
       Shopping Cart
     </ion-title>
   </ion-toolbar>
