moving myyapp code to github

--- a/src/app/menclothing/menclothing.page.html
+++ b/src/app/menclothing/menclothing.page.html
@@ -22,7 +22,7 @@
   <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
   
   <ion-list>
-    <ion-card *ngFor="let product of mencloths">
+    <ion-card *ngFor="let product of menwear">
       <ion-card-header>
         <ion-card-title>{{ product.name }}</ion-card-title>
         <ion-card-title>{{ product.id }}</ion-card-title>
