username field changes

--- a/src/app/accessories/accessories.page.html
+++ b/src/app/accessories/accessories.page.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <ion-fab vertical="top" horizontal="end">
-    <ion-fab-button color = "dark" >
+    <ion-fab-button (click) = 'navtocart()' color = "dark" >
       <ion-icon name="cart-sharp">{{total}}</ion-icon>
     </ion-fab-button>
   </ion-fab>
