--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,5 +1,5 @@
 ion-content{
-  --background:url('/assets/images/alpha.png')no-repeat 100% 100%;
+  --background:url('/assets/images/bg0.png')no-repeat 100% 100%;
 }
 div{
   opacity : 0.6;
