--- a/src/app/cookware/cookware.page.html
+++ b/src/app/cookware/cookware.page.html
@@ -14,15 +14,19 @@
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="top" horizontal="end">
+  <ion-fab vertical="top" horizontal="end" edge slot="fixed">
     <ion-fab-button (click) = 'navtocart()' color = "dark" >
       <ion-icon name="cart-sharp">{{total}}</ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
+  <ion-fab vertical="top" horizontal="start" edge slot="fixed" >
+    <ion-fab-button (click)='navtocategory()' color="dark">
+      <ion-icon name="arrow-undo-outline"></ion-icon>
+  </ion-fab-button>
+  </ion-fab>
  
   <ion-list>
-    <ion-card *ngFor="let product of cookware">
+    <ion-card *ngFor="let product of cookware" color = "dark">
       <ion-card-header>
         <ion-card-title>{{ product.name }}</ion-card-title>
         
@@ -35,7 +39,7 @@
             </ion-label>
           </ion-col>
           <ion-col size="4" class="ion-text-right">
-            <ion-button (click) = 'addtocart(product)'>Add to cart</ion-button>
+            <ion-button (click) = 'addtocart(product)' color = "dark" ><b>Add to cart</b></ion-button>
           </ion-col>
         </ion-row>
       </ion-card-content>
