--- a/src/app/cookware/cookware.page.scss
+++ b/src/app/cookware/cookware.page.scss
@@ -1,4 +1,18 @@
+ion-content{
+  --background:none;
+  background-image:url('/assets/images/bg7.jpg');
+  background-position:center center;
+  background-repeat: no-repeat;
+  background-size:cover ;
+}
+ion-list{
+  opacity: 0.8;
+  ion-card{
+    opacity: 1;
+  }
+
+}
 ion-fab-button {
-    height: 70px;
-    width: 70px;
+    height: 60px;
+    width: 60px;
   }
