--- a/src/app/mycart/mycart.page.html
+++ b/src/app/mycart/mycart.page.html
@@ -16,7 +16,7 @@
 <ion-content>
     <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
   <ion-list>
-    <ion-card *ngFor="let product of carts">
+    <ion-card *ngFor="let product of carts" color = "dark">
       <ion-card-header>
         <ion-card-title>{{ product.name }}</ion-card-title>
       </ion-card-header>
@@ -29,7 +29,7 @@
             </ion-label>
           </ion-col>
           <ion-col size="4" class="ion-text-right">
-            <ion-button (click)='removeProduct(product)'>Remove from cart</ion-button>
+            <ion-button (click)='removeProduct(product)'color = "dark" ><strong>Remove</strong></ion-button>
           </ion-col>
         </ion-row>
       </ion-card-content>
