--- a/src/app/womenclothing/womenclothing.page.html
+++ b/src/app/womenclothing/womenclothing.page.html
@@ -14,18 +14,23 @@
 </ion-header>
 
 <ion-content>
-  <ion-fab vertical="top" horizontal="end">
+  
+  <ion-fab vertical="top" horizontal="end" edge slot="fixed">
     <ion-fab-button (click) = 'navtocart()' color = "dark" >
       <ion-icon name="cart-sharp">{{total}}</ion-icon>
     </ion-fab-button>
   </ion-fab>
-  <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
+
+  <ion-fab vertical="top" horizontal="start" edge slot="fixed" >
+    <ion-fab-button (click)='navtocategory()' color="dark"><ion-icon name="arrow-undo-outline"></ion-icon></ion-fab-button>
+  </ion-fab>
+    
+  
   
   <ion-list>
-    <ion-card *ngFor="let product of womenwear">
+    <ion-card *ngFor="let product of womenwear" color = "dark">
       <ion-card-header>
         <ion-card-title>{{ product.name }}</ion-card-title>
-        
       </ion-card-header>
       <ion-card-content>
         <ion-row class="ion-align-items-center">
@@ -35,7 +40,7 @@
             </ion-label>
           </ion-col>
           <ion-col size="4" class="ion-text-right">
-            <ion-button (click) = 'addtocart(product)'>Add to cart</ion-button>
+            <ion-button (click) = 'addtocart(product)' color = "dark"><b>Add to cart</b></ion-button>
           </ion-col>
         </ion-row>
       </ion-card-content>
